--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.21.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.9.2",
     "jest": "^28.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
