--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
     "eslint": "^8.21.0",
     "expo": "~45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "jest": "^28.1.3",
     "react": "17.0.2",
