--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -17,7 +17,7 @@
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
     "expo-status-bar": "~1.3.0",
-    "firebase": "8.2.3",
+    "firebase": "^8.10.1",
     "jest": "^28.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
