--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -13,7 +13,6 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
-    "eslint": "^8.21.0",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
     "expo-status-bar": "~1.3.0",
@@ -29,7 +28,16 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "2.7.1"
   },
   "private": true
 }
