--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
@@ -21,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
