--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
