--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-sensors": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
     "jest": "^28.1.3",
@@ -25,6 +26,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
