--- a/main-project/calorie-wars-project/package.json
+++ b/main-project/calorie-wars-project/package.json
@@ -20,9 +20,11 @@
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
     "jest": "^28.1.3",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-select-list": "^1.0.18",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^4.12.4",
